Add Day 5 debug lab
